# mcp-public

./: .gitignore  README.md
python/: pyproject.toml
python/client/: langchain_client.py  yahoofinance_client.py  yahoofinance_client_w_memory.py
python/server/: repl_server.py  weather_server.py  yahoofinance_server.py
